--- a/objetos/trein_objetos.html
+++ b/objetos/trein_objetos.html
@@ -47,7 +47,7 @@
                alert(this.name.first + ' ' + this.name.last + ' is ' + this.age + ' years old. He likes ' + this.interests[0] + ' and ' + this.interests[1] + '.');
            }
            this.greeting = function(){
-               alert('Olá meu nome é, '+this.name.first+" e "+this.name.last+" . ");
+               alert('Olá meu nome é  '+this.name.first+" e "+this.name.last+" . ");
            }     
        } 
        var person1 = new Person('Cleiton', 'João Lucas', 32, 'male', ['music','skiing']);     
